dev/test_programs/INVALID/group1/stmt21.go
package main;

func main(){
	var x int;
	for ;;;{
		x = 4;
	}
}
